Fri Apr 13 16:30:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/doxy2swig.py.in: Add script to generate doccomments.i file
	  from XML output of doxygen.  Adds much useful documentation to
	  the python bindings (it's still quite messy, but much better than
	  nothing).  Unfortunately, a bug in SWIG means that not all the
	  documentation is visible - I've put a patch at
	  http://sf.net/tracker/index.php?func=detail&aid=1700146&group_id=1645&atid=301645
	* python/util.i: Include generated doccomments.i file.
	* configure.ac: Add rules to generate python/doxy2swig.
	* python/Makefile.am: Rules to generate and depend on doccomments.i

Fri Apr 13 13:40:03 BST 2007  Olly Betts <olly@survex.com>

	* python/extra.i: Only read wdf for termlists which actually support
	  it.  This was failing for alltermslist in a debug build, and now
	  fails with InvalidOperationError in all builds.

Thu Apr 12 17:56:05 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Parse the visibility support header file, so we don't
	  get errors when we %include other xapian headers.  Fixes error
	  reported by python/except.i, which has a line saying
	  %include "xapian/error.h"

Wed Apr 11 13:42:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Add the custom test failure messages back,
	  and revert changes to tests which I made (which will be going
	  into a custom python-specific test file in time).  When a test
	  fails, display context of the test failure together with the
	  Xapian version and platform information.

Wed Apr 11 10:30:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Replace cut-and-pasted test checking code
	  with functions, to simplify tests.

Tue Apr 10 20:10:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Remove check for version Python version 2.2
	  before running iterator tests - we no longer support earlier