@@ -1,3 +1,9 @@
+Sun Apr 15 00:13:28 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/smoketest.py,python/testsuite.py: Refactor code for
+	  running the python tests into a separate file, so it can be used
+	  for a separate set of python-specific tests.
+
 Fri Apr 13 16:30:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* python/doxy2swig.py.in: Add script to generate doccomments.i file
